[package]
name = "experiments"
version = "0.1.0"
authors = ["Sujay Jayakar <sujayakar314@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
arrayvec = "0.5.2"
anyhow = "1.0.32"
catnip = { path = "../catnip", features = ["threadunsafe"] }
clap = "2.33.3"
dpdk-rs = { git = "https://github.com/PisonJay/dpdk-rs", rev = "d955507079f350f0a0ba04ef2ce479e9a84176d1" }
futures = "0.3"
libc = "0.2.77"
log = "0.4"
rand = { version = "0.7.3", features = ["small_rng"] }
yaml-rust = "0.4.4"
histogram = "0.6.9"
must-let = { git = "https://github.com/sujayakar/must-let" }
catnip_libos = { path = "../catnip_libos" }
